<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>shared</name>
  <version>0.0.1</version>
  <description>ROS2 Shared</description>
  <maintainer email="egorov.vladimir.n@gmail.com">Vladimir Egorov</maintainer>
  <license>MIT License</license>
  <author>Vladimir Egorov</author>
  <author email="egorov.vladimir.n@gmail.com">Vladimir Egorov</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
